--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,12 @@
 
   <table id="problemTable">
     <thead>
-      <tr><th>Date</th><th>Name</th><th>Tags</th><th>Language</th></tr>
+      <tr>
+        <th data-sort="date">Date ⬍</th>
+        <th data-sort="name">Name ⬍</th>
+        <th>Tags</th>
+        <th data-sort="language">Language ⬍</th>
+      </tr>
     </thead>
     <tbody></tbody>
   </table>
